files/non-production/require-ephemeral-storage-requests-limits.yaml
metadata:
  name: "require-ephemeral-storage-requests-limits"
  annotations:
    policies.kyverno.io/category: "Ephemeral-storage"
    policies.kyverno.io/description: "As application workloads share cluster resources,\
      \ it is important to limit resources requested and consumed by each Pod. It\
      \ is recommended to require resource requests and limits per Pod, for ephemeral\
      \ storage. This policy validates that all containers have something specified\
      \ for memory and CPU requests and limits for ephemeral storage.      "
    policies.kyverno.io/severity: "medium"
    policies.kyverno.io/subject: "Pod"
    policies.kyverno.io/title: "Require Limits and Requests"
apiVersion: "kyverno.io/v1"
kind: "ClusterPolicy"
spec:
  validationFailureAction: "audit"
  background: true
  rules:
  - name: "validate-resources-ephemeral-storage"
    match:
      any:
      - resources:
          kinds:
          - "Pod"
    validate:
      pattern:
        spec:
          containers:
          - resources:
              requests:
                ephemeral-storage: "?*"
              limits:
                ephemeral-storage: "?*"
      message: "ephemeral-storage request and limits are required."
